[gd_scene load_steps=83 format=3 uid="uid://81o4g6dt1rnu"]

[ext_resource type="Script" uid="uid://qn6082bm3g2g" path="res://Scripts/BossStateMachine/GigaSlimeStateMachine/giga_slime.gd" id="1_3ss1l"]
[ext_resource type="Texture2D" uid="uid://b5j7m8i0fn311" path="res://spritesheets/demon_slime_FREE_v1.0_288x160_spritesheet.png" id="2_mqaqq"]
[ext_resource type="Script" uid="uid://2obew37vbwpu" path="res://Scripts/health_componentBoss.gd" id="3_14jrq"]
[ext_resource type="Texture2D" uid="uid://crq170u8u5sq5" path="res://Health Icon en.png" id="4_1iv45"]
[ext_resource type="Texture2D" uid="uid://br00ki8qbwwk0" path="res://Health Icon Bar 2.png" id="5_nb1yj"]
[ext_resource type="Texture2D" uid="uid://dt2lcgavq20iu" path="res://Health Icon Bar 1.png" id="6_1t8ss"]
[ext_resource type="Script" uid="uid://f11v3074xa33" path="res://Scripts/BossStateMachine/GigaSlimeStateMachine/giga_slime_state_machine.gd" id="7_mqaqq"]
[ext_resource type="Script" uid="uid://cvbk62i4ky2d3" path="res://Scripts/BossStateMachine/GigaSlimeStateMachine/giga_slime_idle.gd" id="8_14jrq"]
[ext_resource type="Script" uid="uid://cpe0tidvqjut2" path="res://Scripts/BossStateMachine/GigaSlimeStateMachine/giga_slime_chase.gd" id="9_1iv45"]
[ext_resource type="Script" uid="uid://jj0a0fxudr5t" path="res://Scripts/BossStateMachine/GigaSlimeStateMachine/giga_slime_attack.gd" id="10_nb1yj"]
[ext_resource type="Script" uid="uid://crninnccjewmw" path="res://Scripts/BossStateMachine/GigaSlimeStateMachine/giga_slime_hurt.gd" id="11_42o3a"]
[ext_resource type="Script" uid="uid://cd6diiepuro62" path="res://Scripts/giga_slime_taunt.gd" id="11_bjy4n"]
[ext_resource type="Script" uid="uid://b4c40j84e2ehp" path="res://Scripts/BossStateMachine/GigaSlimeStateMachine/giga_slime_death.gd" id="12_bjy4n"]
[ext_resource type="Script" uid="uid://c2ok1gkup0xtq" path="res://Scripts/BossStateMachine/GigaSlimeStateMachine/giga_slime_counter.gd" id="12_oi2dm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k3tli"]
bg_color = Color(0.490196, 0.227451, 0.278431, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1oo3k"]
bg_color = Color(0.862745, 0.286275, 0.286275, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="AtlasTexture" id="AtlasTexture_42o3a"]
atlas = ExtResource("2_mqaqq")
region = Rect2(0, 320, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_bjy4n"]
atlas = ExtResource("2_mqaqq")
region = Rect2(288, 320, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_oi2dm"]
atlas = ExtResource("2_mqaqq")
region = Rect2(576, 320, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_fdw6p"]
atlas = ExtResource("2_mqaqq")
region = Rect2(864, 320, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_jabsl"]
atlas = ExtResource("2_mqaqq")
region = Rect2(1152, 320, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_ukqxg"]
atlas = ExtResource("2_mqaqq")
region = Rect2(1440, 320, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_nabto"]
atlas = ExtResource("2_mqaqq")
region = Rect2(1728, 320, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_l24bl"]
atlas = ExtResource("2_mqaqq")
region = Rect2(2016, 320, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_v0h4h"]
atlas = ExtResource("2_mqaqq")
region = Rect2(2304, 320, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_dwiil"]
atlas = ExtResource("2_mqaqq")
region = Rect2(2592, 320, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_v2i7j"]
atlas = ExtResource("2_mqaqq")
region = Rect2(2880, 320, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_62asx"]
atlas = ExtResource("2_mqaqq")
region = Rect2(3168, 320, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_b4jxk"]
atlas = ExtResource("2_mqaqq")
region = Rect2(3456, 320, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_ljolv"]
atlas = ExtResource("2_mqaqq")
region = Rect2(3744, 320, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_f76yv"]
atlas = ExtResource("2_mqaqq")
region = Rect2(4032, 320, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_rhu2f"]
atlas = ExtResource("2_mqaqq")
region = Rect2(1728, 320, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_bl7qy"]
atlas = ExtResource("2_mqaqq")
region = Rect2(2016, 320, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_2yw5q"]
atlas = ExtResource("2_mqaqq")
region = Rect2(2304, 320, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_2jj1k"]
atlas = ExtResource("2_mqaqq")
region = Rect2(2592, 320, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_6tlgw"]
atlas = ExtResource("2_mqaqq")
region = Rect2(2880, 320, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_alf24"]
atlas = ExtResource("2_mqaqq")
region = Rect2(3168, 320, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_fh0bg"]
atlas = ExtResource("2_mqaqq")
region = Rect2(3456, 320, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_pvxpi"]
atlas = ExtResource("2_mqaqq")
region = Rect2(3744, 320, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_sdu7g"]
atlas = ExtResource("2_mqaqq")
region = Rect2(4032, 320, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_iaeee"]
atlas = ExtResource("2_mqaqq")
region = Rect2(0, 640, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_moekb"]
atlas = ExtResource("2_mqaqq")
region = Rect2(288, 640, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_0as58"]
atlas = ExtResource("2_mqaqq")
region = Rect2(576, 640, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5xlp"]
atlas = ExtResource("2_mqaqq")
region = Rect2(864, 640, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_xow33"]
atlas = ExtResource("2_mqaqq")
region = Rect2(1152, 640, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_pwri5"]
atlas = ExtResource("2_mqaqq")
region = Rect2(1440, 640, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_wbock"]
atlas = ExtResource("2_mqaqq")
region = Rect2(1728, 640, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_phhdu"]
atlas = ExtResource("2_mqaqq")
region = Rect2(2016, 640, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_rxinq"]
atlas = ExtResource("2_mqaqq")
region = Rect2(2304, 640, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_wyt30"]
atlas = ExtResource("2_mqaqq")
region = Rect2(2592, 640, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_3cdic"]
atlas = ExtResource("2_mqaqq")
region = Rect2(2880, 640, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_183ey"]
atlas = ExtResource("2_mqaqq")
region = Rect2(3168, 640, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_jfc0u"]
atlas = ExtResource("2_mqaqq")
region = Rect2(3456, 640, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_xav7x"]
atlas = ExtResource("2_mqaqq")
region = Rect2(4032, 640, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_840tr"]
atlas = ExtResource("2_mqaqq")
region = Rect2(4320, 640, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_ryy3j"]
atlas = ExtResource("2_mqaqq")
region = Rect2(4896, 640, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_24tha"]
atlas = ExtResource("2_mqaqq")
region = Rect2(0, 480, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_3usko"]
atlas = ExtResource("2_mqaqq")
region = Rect2(288, 480, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_0nf5f"]
atlas = ExtResource("2_mqaqq")
region = Rect2(576, 480, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_251nn"]
atlas = ExtResource("2_mqaqq")
region = Rect2(864, 480, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_2efgy"]
atlas = ExtResource("2_mqaqq")
region = Rect2(1152, 480, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_l8cnv"]
atlas = ExtResource("2_mqaqq")
region = Rect2(0, 0, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_4w7xb"]
atlas = ExtResource("2_mqaqq")
region = Rect2(288, 0, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_irc6k"]
atlas = ExtResource("2_mqaqq")
region = Rect2(576, 0, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_1uu2c"]
atlas = ExtResource("2_mqaqq")
region = Rect2(864, 0, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_x0m7d"]
atlas = ExtResource("2_mqaqq")
region = Rect2(1152, 0, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_sj2yc"]
atlas = ExtResource("2_mqaqq")
region = Rect2(1440, 0, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_872mg"]
atlas = ExtResource("2_mqaqq")
region = Rect2(0, 160, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_qm2yd"]
atlas = ExtResource("2_mqaqq")
region = Rect2(864, 160, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_wj5ht"]
atlas = ExtResource("2_mqaqq")
region = Rect2(1152, 160, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_4x6lh"]
atlas = ExtResource("2_mqaqq")
region = Rect2(1440, 160, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_q2wtn"]
atlas = ExtResource("2_mqaqq")
region = Rect2(1728, 160, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_nj35o"]
atlas = ExtResource("2_mqaqq")
region = Rect2(2592, 160, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_rye1b"]
atlas = ExtResource("2_mqaqq")
region = Rect2(2880, 160, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_xicx1"]
atlas = ExtResource("2_mqaqq")
region = Rect2(3168, 160, 288, 160)

[sub_resource type="SpriteFrames" id="SpriteFrames_6tlgw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_42o3a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bjy4n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oi2dm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fdw6p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jabsl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ukqxg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nabto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l24bl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v0h4h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dwiil")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v2i7j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_62asx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4jxk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ljolv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f76yv")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rhu2f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bl7qy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2yw5q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2jj1k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6tlgw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_alf24")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fh0bg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pvxpi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sdu7g")
}],
"loop": false,
"name": &"counter_attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iaeee")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_moekb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0as58")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5xlp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xow33")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pwri5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wbock")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_phhdu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rxinq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wyt30")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3cdic")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_183ey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jfc0u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xav7x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_840tr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ryy3j")
}],
"loop": false,
"name": &"death",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_24tha")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3usko")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0nf5f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_251nn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2efgy")
}],
"loop": false,
"name": &"hurt",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l8cnv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4w7xb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_irc6k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1uu2c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x0m7d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sj2yc")
}],
"loop": true,
"name": &"idle",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_872mg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qm2yd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wj5ht")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4x6lh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q2wtn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nj35o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rye1b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xicx1")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bjy4n"]
radius = 34.5
height = 81.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fh0bg"]
size = Vector2(73, 42)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_oi2dm"]
radius = 5.99203
height = 32.9672

[sub_resource type="CircleShape2D" id="CircleShape2D_oi2dm"]
radius = 7.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nb1yj"]
size = Vector2(483, 185)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1t8ss"]
size = Vector2(116, 97)

[node name="Giga Slime" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_3ss1l")

[node name="GigaSlimeHealthBar" type="CanvasLayer" parent="."]
rotation = 3.14159
scale = Vector2(1, -1)
transform = Transform2D(-1, 0, 0, 1, 0, 0)

[node name="GigaSlimeHealthBar" type="ProgressBar" parent="GigaSlimeHealthBar"]
z_index = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -2473.0
offset_top = 54.0
offset_right = -2101.0
offset_bottom = 79.0
grow_horizontal = 0
theme_override_styles/background = SubResource("StyleBoxFlat_k3tli")
theme_override_styles/fill = SubResource("StyleBoxFlat_1oo3k")
max_value = 300.0
value = 300.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="GigaSlimeHealthBar UI" type="Node2D" parent="GigaSlimeHealthBar/GigaSlimeHealthBar"]
position = Vector2(-50, 0)
scale = Vector2(3, 3)

[node name="HealthIcon" type="Sprite2D" parent="GigaSlimeHealthBar/GigaSlimeHealthBar/GigaSlimeHealthBar UI"]
position = Vector2(15.8333, 3.33778)
scale = Vector2(1.28125, 1.27349)
texture = ExtResource("4_1iv45")

[node name="HealthIconBar2" type="Sprite2D" parent="GigaSlimeHealthBar/GigaSlimeHealthBar/GigaSlimeHealthBar UI"]
position = Vector2(56, 5.25)
scale = Vector2(1.281, 1.281)
texture = ExtResource("5_nb1yj")

[node name="HealthIconBar3" type="Sprite2D" parent="GigaSlimeHealthBar/GigaSlimeHealthBar/GigaSlimeHealthBar UI"]
position = Vector2(92, 5.25)
scale = Vector2(1.281, 1.281)
texture = ExtResource("5_nb1yj")

[node name="HealthIconBar1" type="Sprite2D" parent="GigaSlimeHealthBar/GigaSlimeHealthBar/GigaSlimeHealthBar UI"]
position = Vector2(125, 5.9)
scale = Vector2(1.281, 1.281)
texture = ExtResource("6_1t8ss")

[node name="Giga Slime State Machine" type="Node" parent="."]
script = ExtResource("7_mqaqq")

[node name="GigaSlimeIdle" type="Node" parent="Giga Slime State Machine"]
script = ExtResource("8_14jrq")

[node name="GigaSlimeChase" type="Node" parent="Giga Slime State Machine"]
script = ExtResource("9_1iv45")

[node name="GigaSlimeAttack" type="Node" parent="Giga Slime State Machine"]
script = ExtResource("10_nb1yj")

[node name="GigaSlimeHurt" type="Node" parent="Giga Slime State Machine"]
script = ExtResource("11_42o3a")

[node name="GigaSlimeDeath" type="Node" parent="Giga Slime State Machine"]
script = ExtResource("12_bjy4n")

[node name="GigaSlimeTaunt" type="Node" parent="Giga Slime State Machine"]
script = ExtResource("11_bjy4n")

[node name="GigaSlimeCounter" type="Node" parent="Giga Slime State Machine"]
script = ExtResource("12_oi2dm")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_6tlgw")
animation = &"attack"
frame_progress = 0.759155

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 39.5)
shape = SubResource("CapsuleShape2D_bjy4n")

[node name="Attack Hitbox" type="Area2D" parent="."]

[node name="Attack Area Collision" type="CollisionShape2D" parent="Attack Hitbox"]
position = Vector2(-63.5, 56)
shape = SubResource("RectangleShape2D_fh0bg")

[node name="Attack Area Collision2" type="CollisionShape2D" parent="Attack Hitbox"]
position = Vector2(63.5, 56)
shape = SubResource("RectangleShape2D_fh0bg")

[node name="Attack Hitbox2" type="Area2D" parent="."]

[node name="Attack Area Collision" type="CollisionShape2D" parent="Attack Hitbox2"]
position = Vector2(-63.5, 55)
shape = SubResource("RectangleShape2D_fh0bg")

[node name="Attack Area Collision2" type="CollisionShape2D" parent="Attack Hitbox2"]
position = Vector2(63.5, 56)
shape = SubResource("RectangleShape2D_fh0bg")

[node name="Attack Hitbox3" type="Area2D" parent="."]

[node name="Attack Area Collision" type="CollisionShape2D" parent="Attack Hitbox3"]
position = Vector2(6.5, 77)
rotation = 1.55617
shape = SubResource("CapsuleShape2D_oi2dm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack Hitbox3"]
position = Vector2(13, 1)
shape = SubResource("CircleShape2D_oi2dm")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Attack Hitbox3"]
position = Vector2(-30, 3)
shape = SubResource("CircleShape2D_oi2dm")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Attack Hitbox3"]
shape = SubResource("CircleShape2D_oi2dm")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Attack Hitbox3"]
position = Vector2(-15, 5)
shape = SubResource("CircleShape2D_oi2dm")

[node name="CollisionShape2D7" type="CollisionShape2D" parent="Attack Hitbox3"]
position = Vector2(30, 3)
shape = SubResource("CircleShape2D_oi2dm")

[node name="CollisionShape2D10" type="CollisionShape2D" parent="Attack Hitbox3"]
position = Vector2(16, 7)
shape = SubResource("CircleShape2D_oi2dm")

[node name="Detection Area" type="Area2D" parent="."]
position = Vector2(0, 36)
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection Area"]
position = Vector2(-9.5, 7.5)
shape = SubResource("RectangleShape2D_nb1yj")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("3_14jrq")

[node name="Attack Area" type="Area2D" parent="."]
position = Vector2(0, 34)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack Area"]
position = Vector2(-2, -2.5)
shape = SubResource("RectangleShape2D_1t8ss")

[connection signal="frame_changed" from="AnimatedSprite2D" to="Giga Slime State Machine/GigaSlimeAttack" method="_on_animated_sprite_2d_frame_changed"]
[connection signal="frame_changed" from="AnimatedSprite2D" to="Giga Slime State Machine/GigaSlimeHurt" method="_on_animated_sprite_2d_frame_changed"]
[connection signal="frame_changed" from="AnimatedSprite2D" to="Giga Slime State Machine/GigaSlimeCounter" method="_on_animated_sprite_2d_frame_changed"]
[connection signal="body_entered" from="Attack Hitbox" to="Giga Slime State Machine/GigaSlimeAttack" method="_on_attack_hitbox_body_entered"]
[connection signal="body_entered" from="Attack Hitbox2" to="Giga Slime State Machine/GigaSlimeCounter" method="_on_attack_hitbox_2_body_entered"]
[connection signal="body_entered" from="Attack Hitbox3" to="Giga Slime State Machine/GigaSlimeIdle" method="_on_attack_hitbox_3_body_entered"]
